resume styling on mobile, fixed mobile close trigger

--- a/wp-content/themes/starkers-master/css/jquery.mmenu.css
+++ b/wp-content/themes/starkers-master/css/jquery.mmenu.css
@@ -300,7 +300,7 @@ html.mm-opening .mm-page,
 html.mm-opening #mm-blocker,
 html.mm-opening .mm-fixed-top,
 html.mm-opening .mm-fixed-bottom {
-  left: 60%; }
+  left: 80%; }
 
 .mm-menu {
   width: 80%; }
